# csc299-project

./: Main.py  README.md  summary.md  template.xlsx  test_main.py
task1/: README.md  code.py
task2/: README  code.py
tasks3/: pyproject.toml
tasks3/src/tasks3/: __init__.py  tasks.py
tasks3/tests/: test_inc.py
tasks4/: pyproject.toml
tasks4/src/tasks4/: __init__.py
tasks4/tests/: test_inc.py  test_task_summarizer.py
tasks5/: README.md
tasks5/specs/001-task-management/: PHASE1-COMPLETE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tasks5/specs/001-task-management/checklists/: requirements.md
tasks5/specs/001-task-management/contracts/: cli-interface.md
tasks5/task5/: README.md  tasks.json
tasks5/task5/src/: __init__.py  main.py
tasks5/task5/src/cli/: __init__.py  commands.py  formatter.py  parser.py
tasks5/task5/src/models/: task.py  task_store.py
tasks5/task5/src/services/: __init__.py  search_service.py  task_service.py
tasks5/task5/tests/: conftest.py
