[project]
name = "tasks4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hamzafa234", email = "hamzafa234@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=2.7.2",
    "python-dotenv>=1.2.1",
]

[project.scripts]
tasks4 = "tasks4:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-mock>=3.15.1",
]
